--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,18 +8,20 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "cdk:deploy": "tsc && cdk diff && cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
+    "aws-cdk": "2.149.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
-    "aws-cdk": "2.149.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.3"
   },
   "dependencies": {
+    "@codegenie/serverless-express": "^4.14.1",
     "aws-cdk-lib": "2.149.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
