--- a/cdk/package.json
+++ b/cdk/package.json
@@ -24,6 +24,7 @@
     "@codegenie/serverless-express": "^4.14.1",
     "aws-cdk-lib": "2.149.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
   }
 }
